Changed default string to be more accurate

--- a/notepad.html
+++ b/notepad.html
@@ -12,7 +12,7 @@
             var doloop = true;
             var saveOptions = true;
             
-            var defaultString = "type text here\n\ngo to /bigtext/?help for help and options.";
+            var defaultString = "type text here\n\ngo to /notepad.html?help for help and options.";
             var helpString = "  Help and Options\n\
 ====================\n\
 \n\
